# aiml

./: .env  .gitignore  ai.code-workspace  aws.ipynb  colab_test.ipynb  scaler.code-workspace
agentic/practice/: test.py  text_to_sql.ipynb  text_to_sql_colab.ipynb
cli/mllm/: LICENSE.txt  README.md  pyproject.toml
cli/mllm/src/mllm/: __about__.py  chat.py  cli.py  model_manager.py
cli/mllm/tests/: __init__.py
dbms/: groups.sql
deepLearning/: agenticAI.html
deepLearning/autoencoders/: 10_NN_lecture_Autoencoders.ipynb  rough.ipynb
deepLearning/mit-course/: content_map.json  data.json  index.html  sitemap.xml
deepLearning/neural_networks/: NN_1.ipynb  nn.ipynb
deepLearning/project/: project.ipynb  rough.ipynb
deepLearning/tensorflow/: Tensorflow2.ipynb  ai_human_text_detection_complete_tutorial.ipynb  rough.ipynb
deepLearning/vision/: Mobilenet_Pnumonia_Diagnosis.ipynb  imagesimilarity.ipynb  transfer_learning.ipynb
genai/assignments/: RAG_Assignment_Student.ipynb  rag1.ipynb
genai/lectures/: gpt_rough.ipynb  promptEngineering.ipynb  rag.ipynb  rag2.ipynb  textGen.ipynb
math/: Gradient_Descent_Updatd3.ipynb  gradientDescent.ipynb
ml/: Association_Rule_Mining.ipynb  Collaborative_Recommendation_2_.ipynb  Text_Pre_Processing__NLTK_spaCy___1_.ipynb  V2_of_Sentiment_analysis.ipynb  apriori.ipynb  images1.ipynb  nlp1.ipynb  nlp2.ipynb  recommendationSystems.ipynb  recommendationSystemsRough.ipynb
ml/DecisionTree/: Bagging and Random Forest.ipynb  Boosting_1_Digital.ipynb  (+4 more)
mlops/: cli.py  wrapper.ipynb
notes/: .goodnotesmeta
revision/: Argparse_Tutorial.ipynb  logisticRegression.ipynb  s1.ipynb  s1_after.ipynb
(+264 files in other folders)
